<resources>
    <string name="app_name">Formulario</string>
    <string name="siguiente">Siguiente</string>
    <string name="fechaNacimiento">Fecha de Nacimiento:</string>
    <string name="telefono">Tel.</string>
    <string name="email">E-Mail:</string>
    <string name="descripcion">Descripción:</string>
    <string name="confirmar">Confirmar Datos</string>
    <string name="editar">Editar Datos</string>

</resources>
